p2/confs/Service_app1.yaml
apiVersion: v1
kind: Service
metadata:
  name: app1-service
spec:
  type: ClusterIP
  selector:
    app: app1
  ports:
    - port: 8080
      targetPort: 8080
