p2/confs/Service_app2.yaml
apiVersion: v1
kind: Service
metadata:
  name: app2-service
spec:
  type: ClusterIP
  selector:
    app: app2
  ports:
    - port: 8080
      targetPort: 8080
