p2/confs/Service_app3.yaml
apiVersion: v1
kind: Service
metadata:
  name: app3-service
spec:
  type: ClusterIP
  selector:
    app: app3
  ports:
    - port: 8080
      targetPort: 8080
